feature/ added aplication properties

--- a/api_moviles/src/main/resources/application.properties
+++ b/api_moviles/src/main/resources/application.properties
@@ -1,10 +1,12 @@
-server.port=8089
+server.port=8085
 spring.application.name=LoggyAPI
 spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.url=jdbc:postgresql://localhost:5432/loggy_db
-spring.datasource.url=jdbc:postgresql://13.90.249.87:5432/loggy_db_final
+#spring.datasource.url=jdbc:postgresql://13.90.249.87:5432/loggy_db_final
+spring.datasource.url=jdbc:postgresql://viaduct.proxy.rlwy.net:39994/railway
 spring.datasource.username=postgres
-spring.datasource.password=B0ldeon18
+#spring.datasource.username=postgres
+spring.datasource.password=NmTMKzOrgjFqaCTAUeafZlfBtrUcTcfa
 #spring.datasource.password=B@ldeon18
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
